BJS2-47362 Потренируем StreamAPI 2 исправления